--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,7 @@
             android:layout_gravity="center"
             android:text="@string/app_name"
             android:textColor="@android:color/black"
-            android:textSize="24sp" />
+            android:textSize="24dp" />
 
     </androidx.appcompat.widget.Toolbar>
 
