--- a/app/src/main/res/layout/frag_home.xml
+++ b/app/src/main/res/layout/frag_home.xml
@@ -32,10 +32,12 @@
             android:orientation="horizontal">
 
             <ImageView
+                android:id="@+id/bestMenu"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_marginEnd="44dp"
-                android:background="#000000" />
+                android:background="#000000"
+                android:clickable="true" />
 
             <ImageView
                 android:layout_width="100dp"
