--- a/app/src/main/res/layout/frag_home.xml
+++ b/app/src/main/res/layout/frag_home.xml
@@ -32,7 +32,7 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/bestMenu"
+                android:id="@+id/menuBest"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_marginEnd="44dp"
@@ -64,25 +64,31 @@
                 android:paddingBottom="8dp">
 
                 <ImageView
+                    android:id="@+id/menuKor"
                     android:layout_width="80dp"
                     android:layout_height="80dp"
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="20dp"
-                    android:background="#000000" />
+                    android:background="#000000"
+                    android:clickable="true" />
 
                 <ImageView
+                    android:id="@+id/menuJp"
                     android:layout_width="80dp"
                     android:layout_height="80dp"
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="20dp"
-                    android:background="#000000" />
+                    android:background="#000000"
+                    android:clickable="true" />
 
                 <ImageView
+                    android:id="@+id/menuCh"
                     android:layout_width="80dp"
                     android:layout_height="80dp"
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="20dp"
-                    android:background="#000000" />
+                    android:background="#000000"
+                    android:clickable="true" />
 
             </TableRow>
 
@@ -94,25 +100,31 @@
                 android:paddingBottom="20dp">
 
                 <ImageView
+                    android:id="@+id/menuWf"
                     android:layout_width="80dp"
                     android:layout_height="80dp"
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="20dp"
-                    android:background="#000000" />
+                    android:background="#000000"
+                    android:clickable="true" />
 
                 <ImageView
+                    android:id="@+id/menuCafe"
                     android:layout_width="80dp"
                     android:layout_height="80dp"
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="20dp"
-                    android:background="#000000" />
+                    android:background="#000000"
+                    android:clickable="true" />
 
                 <ImageView
+                    android:id="@+id/menuBeer"
                     android:layout_width="80dp"
                     android:layout_height="80dp"
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="20dp"
-                    android:background="#000000" />
+                    android:background="#000000"
+                    android:clickable="true"/>
 
             </TableRow>
 
