--- a/app/src/main/res/layout/frag_booking_listitem.xml
+++ b/app/src/main/res/layout/frag_booking_listitem.xml
@@ -8,7 +8,10 @@
     android:paddingTop="8dp"
     android:paddingRight="16dp"
     android:paddingBottom="8dp"
-    android:weightSum="10">
+    android:layout_marginBottom="8dp"
+    android:weightSum="10"
+    android:background="@android:color/white"
+    android:id="@+id/linear_list" >
 
     <ImageView
         android:id="@+id/image_listView"
@@ -17,32 +20,35 @@
         android:src="@drawable/jari_loding" />
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:layout_weight="8"
-        android:gravity="center"
-        android:orientation="vertical">
+        android:gravity="center_vertical"
+        android:orientation="vertical" >
 
         <TextView
             android:id="@+id/title_listView"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="4dp"
+            android:layout_gravity="left"
             tools:text="가게 이름" />
 
         <TextView
-            android:id="@+id/adress_listView"
-            android:layout_width="match_parent"
+            android:id="@+id/address_listView"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="4dp"
+            android:layout_gravity="left"
             tools:text="가게 주소" />
 
         <TextView
             android:id="@+id/reservation_listView"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="left"
             tools:text="번호 / 예약" />
 
     </LinearLayout>
