--- a/app/src/main/res/layout/frag_person.xml
+++ b/app/src/main/res/layout/frag_person.xml
@@ -26,13 +26,27 @@
                 android:layout_height="100dp"
                 android:background="#000000" />
 
-            <TextView
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:gravity="center"
-                android:text="텍스트 뷰"
-                android:textSize="32sp" />
+                android:orientation="horizontal"
+                android:gravity="center" >
 
+                <Button
+                    android:id="@+id/btn_sign_in"
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:text="로그인" />
+
+            <Button
+                android:id="@+id/btn_sign_up"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:text="회원가입" />
+
+            </LinearLayout>
         </LinearLayout>
 
         <TextView
