--- a/app/src/main/res/layout/frag_booking_listitem.xml
+++ b/app/src/main/res/layout/frag_booking_listitem.xml
@@ -10,8 +10,7 @@
     android:paddingBottom="8dp"
     android:layout_marginBottom="8dp"
     android:weightSum="10"
-    android:background="@android:color/white"
-    android:id="@+id/linear_list" >
+    android:background="@android:color/white" >
 
     <ImageView
         android:id="@+id/image_listView"
