--- a/app/src/main/res/layout/frag_person.xml
+++ b/app/src/main/res/layout/frag_person.xml
@@ -17,36 +17,42 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="160dp"
             android:layout_marginBottom="20dp"
             android:orientation="horizontal">
 
             <ImageView
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:background="#000000" />
+                android:background="#000000"
+                android:layout_gravity="center_vertical"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="horizontal"
-                android:gravity="center" >
+                android:gravity="center"
+                android:orientation="vertical">
 
-                <Button
-                    android:id="@+id/btn_sign_in"
+                <TextView
                     android:layout_width="100dp"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_margin="8dp"
-                    android:text="로그인" />
+                    android:layout_margin="4dp"
+                    android:text="사용자 이름"
+                    android:textSize="20dp" />
 
-            <Button
-                android:id="@+id/btn_sign_up"
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_margin="8dp"
-                android:text="회원가입" />
+                <TextView
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="4dp"
+                    android:text="전화번호"
+                    android:textSize="20dp" />
+
+                <TextView
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="4dp"
+                    android:text="인원"
+                    android:textSize="20dp" />
 
             </LinearLayout>
         </LinearLayout>
@@ -55,37 +61,28 @@
             android:id="@+id/person_like"
             android:layout_width="match_parent"
             android:layout_height="48dp"
+            android:clickable="true"
             android:gravity="center_vertical"
             android:text="찜"
-            android:textSize="24sp"
-            android:clickable="true" />
+            android:textSize="24sp" />
 
         <TextView
             android:id="@+id/person_alarm"
             android:layout_width="match_parent"
             android:layout_height="48dp"
+            android:clickable="true"
             android:gravity="center_vertical"
             android:text="알림"
-            android:textSize="24sp"
-            android:clickable="true" />
-
-        <TextView
-            android:id="@+id/person_review"
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:gravity="center_vertical"
-            android:text="내가 쓴 리뷰"
-            android:textSize="24sp"
-            android:clickable="true" />
+            android:textSize="24sp" />
 
         <TextView
             android:id="@+id/person_information"
             android:layout_width="match_parent"
             android:layout_height="48dp"
+            android:clickable="true"
             android:gravity="center_vertical"
             android:text="내정보 관리"
-            android:textSize="24sp"
-            android:clickable="true" />
+            android:textSize="24sp" />
 
 
     </LinearLayout>
