--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -22,6 +22,7 @@
             android:layout_width="300dp"
             android:layout_height="match_parent"
             android:layout_margin="8dp"
+            android:inputType="number"
             android:hint="전화번호"/>
 
         <EditText
@@ -37,7 +38,8 @@
             android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
-            android:text="확인" />
+            android:text="확인"
+            android:onClick="Check"/>
     </LinearLayout>
 
 </ScrollView>
