--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -2,6 +2,6 @@
 <network-security-config>
     <!-- http 네트워크 보안 설정 Android Pie(9.0) 부터 적용 -->
     <domain-config cleartextTrafficPermitted="true">
-        <domain includeSubdomains="true">wkdgml96.iptime.org:8080/</domain>
+        <domain includeSubdomains="true">wkdgml96.iptime.org:8080</domain>
     </domain-config>
 </network-security-config>
