--- a/app/src/main/res/layout/frag_store_info.xml
+++ b/app/src/main/res/layout/frag_store_info.xml
@@ -37,6 +37,7 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/store_info_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="4dp"
@@ -44,6 +45,7 @@
                     android:textSize="20sp" />
 
                 <TextView
+                    android:id="@+id/store_info_phone"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="4dp"
@@ -51,6 +53,7 @@
                     android:textSize="20sp" />
 
                 <TextView
+                    android:id="@+id/store_info_address"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="4dp"
@@ -75,6 +78,7 @@
                 android:textStyle="bold" />
 
             <TextView
+                android:id="@+id/store_info_intro"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="가게 설명 부분" />
@@ -113,12 +117,14 @@
                     android:orientation="vertical">
 
                     <TextView
+                        android:id="@+id/store_info_menu"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="8dp"
                         android:text="메뉴 이름" />
 
                     <TextView
+                        android:id="@+id/store_info_price"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="8dp"
@@ -126,8 +132,33 @@
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="8dp"
+            android:gravity="center"
+            android:layout_gravity="center"
+            android:orientation="horizontal" >
 
+            <TextView
+                android:id="@+id/store_info_wait"
+                android:layout_width="100dp"
+                android:layout_height="30dp"
+                android:textSize="25sp"
+                android:textStyle="bold"
+                android:layout_marginLeft="4dp"
+                android:layout_marginRight="4dp"
+                android:text="대기숫자" />
 
+            <Button
+                android:id="@+id/store_info_btn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="4dp"
+                android:layout_marginLeft="4dp"
+                android:text="원격 대기 하기" />
+
+        </LinearLayout>
     </LinearLayout>
 
 </ScrollView>
