--- a/app/src/main/res/layout/frag_person.xml
+++ b/app/src/main/res/layout/frag_person.xml
@@ -24,7 +24,7 @@
             <ImageView
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:background="#000000"
+                android:background="@drawable/jari_user_profile"
                 android:layout_gravity="center_vertical"/>
 
             <LinearLayout
