--- a/app/src/main/res/layout/frag_store_info.xml
+++ b/app/src/main/res/layout/frag_store_info.xml
@@ -23,11 +23,11 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/store_info_image"
+                android:id="@+id/store_info_ig_profile"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_margin="12dp"
-                android:background="@android:color/black" />
+                android:src="@drawable/jari_user_profile" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -37,11 +37,12 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/store_info_title"
+                    android:id="@+id/store_info_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="4dp"
                     android:text="가게 이름"
+                    android:textColor="@android:color/black"
                     android:textSize="20sp" />
 
                 <TextView
@@ -50,6 +51,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="4dp"
                     android:text="가게 전화번호"
+                    android:textColor="@android:color/black"
                     android:textSize="20sp" />
 
                 <TextView
@@ -58,6 +60,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="4dp"
                     android:text="가게 주소"
+                    android:textColor="@android:color/black"
                     android:textSize="20sp" />
             </LinearLayout>
         </LinearLayout>
@@ -74,6 +77,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
                 android:text="가게 정보"
+                android:textColor="@android:color/black"
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
@@ -81,7 +85,9 @@
                 android:id="@+id/store_info_intro"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="가게 설명 부분" />
+                android:text="가게 설명 부분"
+                android:textColor="@android:color/black"
+                android:textSize="15sp" />
         </LinearLayout>
 
         <!-- 가게 메인 메뉴 설명 -->
@@ -96,6 +102,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
                 android:text="대표 메뉴"
+                android:textColor="@android:color/black"
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
@@ -105,9 +112,10 @@
                 android:orientation="horizontal">
 
                 <ImageView
+                    android:id="@+id/store_info_ig_menu"
                     android:layout_width="100dp"
                     android:layout_height="100dp"
-                    android:background="@android:color/black" />
+                    android:src="@drawable/jari_user_profile" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -121,42 +129,63 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="8dp"
-                        android:text="메뉴 이름" />
+                        android:text="메뉴 이름"
+                        android:textColor="@android:color/black"
+                        android:textSize="15sp" />
 
                     <TextView
                         android:id="@+id/store_info_price"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="8dp"
-                        android:text="가격" />
+                        android:text="가격"
+                        android:textColor="@android:color/black"
+                        android:textSize="15sp" />
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="8dp"
-            android:gravity="center"
             android:layout_gravity="center"
-            android:orientation="horizontal" >
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:padding="8dp">
 
-            <TextView
-                android:id="@+id/store_info_wait"
+            <LinearLayout
                 android:layout_width="100dp"
-                android:layout_height="30dp"
-                android:textSize="25sp"
-                android:textStyle="bold"
-                android:layout_marginLeft="4dp"
-                android:layout_marginRight="4dp"
-                android:text="대기숫자" />
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="100dp"
+                    android:layout_height="30dp"
+                    android:layout_marginLeft="4dp"
+                    android:layout_marginRight="4dp"
+                    android:gravity="center"
+                    android:text="대기 인원"
+                    android:textColor="@android:color/black"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/store_info_wait"
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="숫자"
+                    android:textColor="@android:color/black" />
+
+            </LinearLayout>
 
             <Button
                 android:id="@+id/store_info_btn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="4dp"
                 android:layout_marginLeft="4dp"
-                android:text="원격 대기 하기" />
+                android:layout_marginRight="4dp"
+                android:text="순서표 뽑기" />
 
         </LinearLayout>
     </LinearLayout>
